--- a/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.08.30_X-Codec.md
@@ -47,10 +47,10 @@
 ## Abstract: 摘要
 
 > Recent advancements in audio generation have been significantly propelled by the capabilities of Large Language Models (LLMs). 
-> The existing research on audio LLM has primarily focused on enhancing the architecture and scale of audio language models, as well as leveraging larger datasets, and generally, acoustic codecs, such as EnCodec, are used for audio tokenization. 
+> The existing research on audio LLM has primarily focused on enhancing the architecture and scale of audio language models, as well as leveraging larger datasets, and generally, acoustic codecs, such as [EnCodec](2022.10.24_EnCodec.md), are used for audio tokenization. 
 > However, these codecs were originally designed for audio compression, which may lead to suboptimal performance in the context of audio LLM. 
 > Our research aims to address the shortcomings of current audio LLM codecs, particularly their challenges in maintaining semantic integrity in generated audio. 
-> For instance, existing methods like VALL-E, which condition acoustic token generation on text transcriptions, often suffer from content inaccuracies and elevated word error rates (WER) due to semantic misinterpretations of acoustic tokens, resulting in word skipping and errors. 
+> For instance, existing methods like [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), which condition acoustic token generation on text transcriptions, often suffer from content inaccuracies and elevated word error rates (WER) due to semantic misinterpretations of acoustic tokens, resulting in word skipping and errors. 
 > To overcome these issues, we propose a straightforward yet effective approach called ***X-Codec***. 
 > ***X-Codec*** incorporates semantic features from a pre-trained semantic encoder before the Residual Vector Quantization (RVQ) stage and introduces a semantic reconstruction loss after RVQ. 
 > By enhancing the semantic ability of the codec, ***X-Codec*** significantly reduces WER in speech synthesis tasks and extends these benefits to non-speech applications, including music and sound generation. 
@@ -82,7 +82,7 @@
 > These models focus on understanding and generating natural language, which is inherently rich in semantics. 
 > Motivated by this, we assume that a better audio tokenizer should encapsulate rich semantic information to facilitate an easy understanding of audio content, thus reducing the language model's burden in interpreting tokens. 
 > However, most audio codecs focus on acoustic reconstruction which ignores the semantic information. 
-> As a result, LLM essentially tries to predict the local fluctuations of the audio signal, which is difficult, and methods like VALL-E, which condition acoustic token generation on text transcriptions, frequently result in content inaccuracies causing elevated word error rates (WER), stemming from the semantic misinterpretations of acoustic tokens, leading to word skipping and errors.
+> As a result, LLM essentially tries to predict the local fluctuations of the audio signal, which is difficult, and methods like [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), which condition acoustic token generation on text transcriptions, frequently result in content inaccuracies causing elevated word error rates (WER), stemming from the semantic misinterpretations of acoustic tokens, leading to word skipping and errors.
 >
 > To address this issue, approaches like [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) have attempted to disentangle speech into separate tokens for content and timbre and perform distillation-based semantic and acoustic integration. 
 > However, this method may not integrate smoothly with all audio LLMs, especially those requiring uniform token treatment across different layers, such as utilizing flattened codec tokens ([UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md)). 
@@ -93,7 +93,7 @@
 >
 > We have conducted comprehensive evaluations of ***X-Codec*** across various applications, including text-to-speech, music continuation, and text-to-sound synthesis. 
 > The results consistently demonstrate the effectiveness of the proposed method. 
-> Furthermore, our comparative evaluation on VALL-E based TTS demonstrates that ***X-Codec*** outperforms existing disentanglement techniques, thereby highlighting its efficacy and versatility in advancing audio LLM technologies.
+> Furthermore, our comparative evaluation on [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) based TTS demonstrates that ***X-Codec*** outperforms existing disentanglement techniques, thereby highlighting its efficacy and versatility in advancing audio LLM technologies.
 
 ## 2.Related Works: 相关工作
 
@@ -128,7 +128,7 @@
 > These codecs primarily focus on acoustic reconstruction and higher compression rates, often overlooking their potential as tokenizers for audio LLMs. 
 > Some attempts have been made to develop more suitable tokenizers for audio LLMs. 
 > For example, [SpeechTokenizer](2023.08.31_SpeechTokenizer.md) utilizes HuBERT to separate speech into distinct VQ components for content and timbre/acoustic details. 
-> This separation improves the modeling of content in the AR stage of VALL-E, while the NAR stage enriches the acoustic details. 
+> This separation improves the modeling of content in the AR stage of [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), while the NAR stage enriches the acoustic details. 
 > However, a distillation framework is exploited, this makes SpeechTokenizer may not be compatible with all LLM architectures, especially those that require uniform treatment of tokens, such as methods using flattened codec tokens ([UniAudio](../Speech_LLM/2023.10.01_UniAudio.md); [MusicGen](../Speech_LLM/2023.06.08_MusicGen.md)). 
 > Another attempt is presented by [SemantiCodec](SemantiCodec.md), which employs a pre-trained [AudioMAE](../_tmp/AudioMAE.md) to generate distinct semantic and acoustic tokens from mel-spectrograms. 
 > However, this method inherits the issues of SpeechTokenizer and introduces additional complexity in token modeling. 
@@ -140,27 +140,29 @@
 
 > In this section, we propose ***X-Codec***, a straightforward yet effective method to overcome the semantic shortcomings of the current acoustic codecs. 
 
+![](Images/2024.08.30_X-Codec_Fig.01.png)
+
 ### Acoustic Audio codec
 
-> As illustrated in Figure \ref{fig_xcodec}, our model builds upon the framework established by existing acoustic codecs such as [EnCodec](2022.10.24_EnCodec.md) and [DAC](2023.06.11_Descript-Audio-Codec.md). 
+> As illustrated in Figure.01, our model builds upon the framework established by existing acoustic codecs such as [EnCodec](2022.10.24_EnCodec.md) and [DAC](2023.06.11_Descript-Audio-Codec.md). 
 > An acoustic audio codec is composed of three main components: an acoustic encoder, a quantizer, and an acoustic decoder. 
-> The input of the codec is the raw waveform $\textbf{X} \in \mathbb{R}^{n}$, where $n$ represents the number of waveform samples. 
-> This waveform is fed into the acoustic encoder, which consists of several convolutional layers and employs temporal downscaling to extract frame-level latent acoustic features $\textbf{A} \in \mathbb{R}^{H_a \times T}$, where $H_a$ denotes the hidden size of the acoustic features and $T$ is the number of frames. 
-> These continuous features are then transformed into a series of discrete tokens $\textbf{Q} \in \mathbb{R}^{M \times T}$ using a Residual Vector Quantizer (RVQ) with $M$ quantizer layers. 
-> During training, a specific codebook for the quantizer is learned, enabling the conversion of discrete tokens back to continuous features $\textbf{A}_q \in \mathbb{R}^{H_a \times T}$. 
-> The acoustic decoder then reconstructs the waveform $\hat{\textbf{X}}$ from $\textbf{A}_q$ using several convolutional layers and temporal upsampling. 
+> The input of the codec is the raw waveform $\mathbf{X} \in \mathbb{R}^{n}$, where $n$ represents the number of waveform samples. 
+> This waveform is fed into the acoustic encoder, which consists of several convolutional layers and employs temporal downscaling to extract frame-level latent acoustic features $\mathbf{A} \in \mathbb{R}^{H_a \times T}$, where $H_a$ denotes the hidden size of the acoustic features and $T$ is the number of frames. 
+> These continuous features are then transformed into a series of discrete tokens $\mathbf{Q} \in \mathbb{R}^{M \times T}$ using a Residual Vector Quantizer (RVQ) with $M$ quantizer layers. 
+> During training, a specific codebook for the quantizer is learned, enabling the conversion of discrete tokens back to continuous features $\mathbf{A}_q \in \mathbb{R}^{H_a \times T}$. 
+> The acoustic decoder then reconstructs the waveform $\hat{\mathbf{X}}$ from $\mathbf{A}_q$ using several convolutional layers and temporal upsampling. 
 > The training process is supervised using various losses, including mel loss, STFT loss, and GAN loss, to ensure high-quality acoustic reconstruction.
 
 ### Analysing Semantic Shortcoming
 
-> In this section, we investigate the impact of acoustic codecs on the performance of audio LLMs, focusing specifically on VALL-E, a pioneering model that leverages language model principles for text-to-speech. 
-> Our analysis reveals that training VALL-E using Encodec results in high word error rates (WER) and frequent inaccuracies in content generation. 
-> For example, when the input text ``he passed through Henley Saint Albans and came so near to London as Harrow on the Hill'' is synthesized, it is erroneously produced as ``he passed through henley saint albeans and camsel knew to lunglan as herold the lor''. 
-> This misinterpretation, which is beyond simply improving the audio quality, suggests a fundamental limitation in Encodec's ability to differentiate phonemes, possibly due to its inadequate semantic processing capabilities.
+> In this section, we investigate the impact of acoustic codecs on the performance of audio LLMs, focusing specifically on [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), a pioneering model that leverages language model principles for text-to-speech. 
+> Our analysis reveals that training [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) using [EnCodec](2022.10.24_EnCodec.md) results in high word error rates (WER) and frequent inaccuracies in content generation. 
+> For example, when the input text `he passed through Henley Saint Albans and came so near to London as Harrow on the Hill` is synthesized, it is erroneously produced as `he passed through henley saint albeans and camsel knew to lunglan as herold the lor`. 
+> This misinterpretation, which is beyond simply improving the audio quality, suggests a fundamental limitation in [EnCodec](2022.10.24_EnCodec.md)'s ability to differentiate phonemes, possibly due to its inadequate semantic processing capabilities.
 >
-> To substantiate the above hypothesis, we conducted Phonetic Discriminability ABX Tests to evaluate the phonetic discriminability of Encodec's representations. 
+> To substantiate the above hypothesis, we conducted Phonetic Discriminability ABX Tests to evaluate the phonetic discriminability of [EnCodec](2022.10.24_EnCodec.md)'s representations. 
 > The details are provided in the experiment section. 
-> Our findings reveal that Encodec's representations exhibit poor phonetic discriminability, which confirms the presence of semantic inadequacies in the codec. 
+> Our findings reveal that [EnCodec](2022.10.24_EnCodec.md)'s representations exhibit poor phonetic discriminability, which confirms the presence of semantic inadequacies in the codec. 
 > Based on these results, we assert that these semantic shortcomings are a significant contributing factor to the observed inaccuracies of language model based audio generation. 
 >
 > To effectively address these semantic limitations, we introduce a novel approach that integrates more comprehensive semantic features into the codec's architecture. 
@@ -170,26 +172,178 @@
 ### Designing Auxiliary Semantic Module
 
 > Our approach employs a straightforward method that enhances audio codecs by directly concatenating semantic and acoustic features. 
-> Initially, we extract the semantic feature vector $\textbf{S}^* \in \mathbb{R}^{H_s \times T}$ from the audio waveform $\textbf{x}$. 
+> Initially, we extract the semantic feature vector $\mathbf{S}^* \in \mathbb{R}^{H_s \times T}$ from the audio waveform $\mathbf{x}$. 
 > This extraction utilizes a self-supervised, pre-trained model such as [HuBERT](../Speech_Representaion/2021.06.14_HuBERT.md) or [wav2vec 2.0](../Speech_Representaion/2020.06.20_Wav2Vec2.0.md). 
-> The extracted features are then processed through multiple convolutional layers within a semantic encoder to yield the refined semantic feature vector $\textbf{S}$. 
-> Concurrently, the acoustic branch produces the feature $\textbf{A}$. 
-> These outputs, $\textbf{S}$ and $\textbf{A}$, are subsequently concatenated using a linear projection $\phi$, formulated as:
+> The extracted features are then processed through multiple convolutional layers within a semantic encoder to yield the refined semantic feature vector $\mathbf{S}$. 
+> Concurrently, the acoustic branch produces the feature $\mathbf{A}$. 
+> These outputs, $\mathbf{S}$ and $\mathbf{A}$, are subsequently concatenated using a linear projection $\phi$, formulated as:
 
 $$
-\textbf{U} =  concat(\phi_s(\textbf{A}), \phi_a(\textbf{S})) ,
+\mathbf{U} =  concat(\phi_s(\mathbf{A}), \phi_a(\mathbf{S})) ,
 $$
 
-> where the concatenated feature $\textbf{U} \in \mathbb{R}^{H_u \times T}$ is designed to maximize information preservation from both semantic and acoustic sources. 
+> where the concatenated feature $\mathbf{U} \in \mathbb{R}^{H_u \times T}$ is designed to maximize information preservation from both semantic and acoustic sources. 
 > This combined feature is then subject to RVQ using an $M$-layer quantizer, resulting in tokens that encapsulate a rich mixture of semantic and acoustic information.
 >
-> The quantized feature $\textbf{U}_q$ is designed to meet the decoder's objectives through two projectors, $\beta_s$ and $\beta_a$, which enable the decoders to reconstruct the original semantic feature $\hat{\textbf{S}}^*$ and the audio waveform $\hat{\textbf{x}}$. 
+> The quantized feature $\mathbf{U}_q$ is designed to meet the decoder's objectives through two projectors, $\beta_s$ and $\beta_a$, which enable the decoders to reconstruct the original semantic feature $\hat{\mathbf{S}}^*$ and the audio waveform $\hat{\mathbf{x}}$. 
 > We adhere to established acoustic reconstruction methods from previous works while introducing a Mean Squared Error (MSE) loss specifically for the reconstruction of semantic features. 
 > Furthermore, a constant weight $\gamma$ is applied to the semantic loss to ensure that its scale is aligned with other losses, thus promoting a balanced training objective.
 
 ## 4.Experiments: 实验
 
-## 5.Results: 结果
+> Given that established audio codecs such as Encodec, Speechtokenizer, and DAC are trained on diverse datasets with varying configurations, we meticulously design experiments to rigorously evaluate the efficacy of our proposed solution, ***X-Codec***. 
+> To ensure a fair and unbiased comparison, each experiment employs a baseline acoustic codec that is precisely aligned with our ***X-Codec*** in terms of training data, training steps, and other hyperparameters. 
+> The primary distinction between the baseline codec and ***X-Codec*** lies in the exclusion of the auxiliary semantic module in the baseline configuration. 
+> This controlled experimental design enables us to isolate and evaluate the specific contributions of our semantic enhancements to the overall performance of the audio LLMs.
+
+### Text-to-Speech 文本转语音部分
+
+> In this subsection, we critically evaluate the performance of various audio codecs in training the [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) model for zero-shot Text-to-Speech (TTS) tasks. 
+> Our investigation is guided by two primary objectives:
+> - To determine whether the ***X-Codec*** can enhance the performance of audio LLMs in TTS applications.
+> - To evaluate the comparative advantages of ***X-Codec*** over the disentanglement strategy employed by SpeechTokenizer, specifically within the context of the [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md) model.
+
+#### Baselines
+
+> For a comprehensive comparison, we employ several state-of-the-art neural audio codecs as baselines:
+> - EnCodec \footnote{\url{https://huggingface.co/facebook/encodec\_24khz}}: The open-source EnCodec model \cite{defossez2022high}, trained on a diverse range of 24kHz audio data, can compress audio to bitrates between 1.5 and 24.0 kbps while maintaining high fidelity.
+> - DAC \footnote{\url{https://github.com/descriptinc/descript-audio-codec}}: The open-source DAC model \cite{kumar2024high} utilizes enhanced VQ techniques. 
+> For our experiments, we employ the official 16kHz version.
+> - SpeechTokenizer \footnote{\url{https://github.com/ZhangXInFD/SpeechTokenizer}}: This model \cite{zhang2023speechtokenizer} is a unified speech tokenizer that leverages distinct VQ layers to separate speech into content and timbre components. 
+> We utilize their official checkpoints in our evaluations.
+
+#### Training Details of X-Codec
+
+> Given our objective to assess the efficacy of ***X-Codec*** in leveraging semantic information, we meticulously align our experimental setup with that used for SpeechTokenizer. 
+> Both models are trained on the same dataset, LibriSpeech, and utilize the same pre-trained self-supervised representations from HuBERT-base-ls960 \footnote{\url{https://huggingface.co/facebook/hubert-base-ls960}}. 
+> To ensure comparability, we also adopt the strategy of employing the average representation across various layers of HuBERT as our semantic training objective.
+
+#### Training Details of VALL-E
+
+> For reproduction of the [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md), we utilize the resources specified in the provided repository ([Github](https://github.com/lifeiteng/vall-e)). 
+> The training data is the LibriTTS, retaining the default settings as specified in the repository, except for the learning rate during the AR stage, which is adjusted to 0.01 to enhance model stability. 
+> The training process span 100 epochs for the AR stage and 200 epochs for the non-autoregressive (NAR) stage, same for all audio codecs for a fair comparison.
+
+#### Evaluation Metrics
+
+> To assess the performances of zero-shot TTS systems, we employ the following metrics:
+> - [WER (Word Error Rate)](../../Evaluations/WER.md): We utilize an Automatic Speech Recognition (ASR) model to transcribe the generated audio ([VALL-E](../Speech_LLM/2023.01.05_VALL-E.md)). 
+> The discrepancies between these transcriptions and the original texts are quantified using WER, providing a critical measure of audio intelligibility.
+> - [Sim-O (Similarity Objective)](../../Evaluations/Sim-O.md): This metric assesses the objective similarity between synthesized speech and the original reference speech. 
+> Sim-O uses feature embeddings extracted from a pre-trained speaker verification model to measure this similarity \cite{hsu2021hubert,kim2024clam}\footnote{\url{https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification}}, reflecting the codec's ability to preserve speaker characteristics.
+> - [UTMOS](../../Evaluations/UTMOS.md): We evaluate the audio quality using UTMOS, a Speech MOS (Mean Opinion Score) predictor \cite{saeki2022utmos}\footnote{\url{https://github.com/tarepan/SpeechMOS}} that automatically measures the naturalness of speech. 
+> This metric provides insights into the overall auditory quality of the synthesized speech.
+
+#### Zero-shot TTS Results
+
+> We use [librispeech-test-clean](../../Datasets/2015.04.19_LibriSpeech.md) for zero-shot TTS evaluation following [VALL-E](../Speech_LLM/2023.01.05_VALL-E.md)-continual-setting. 
+> The results in Table \ref{valle_exp} demonstrate the following key findings:
+
+> - When comparing both ***X-Codec*** and SpeechTokenizer against the baseline and other acoustic codecs like DAC and Encodec, we observe improvements in WER. 
+> This supports our hypothesis that integrating semantic information helps audio LLMs better understand content.
+> - Comparing the baseline acoustic codec and SpeechTokenizer, SpeechTokenizer exhibited lower Sim-O scores. 
+> We attribute this reduction to its initial disentanglement phase, which exclusively focuses on content prediction. 
+> This specialization potentially hampers the NAR phase's ability to accurately reconstruct speaker timbre when conditioned solely on tokens derived from the primary content-focused stage, resulting in poor speaker similarity.
+> - ***X-Codec*** not only shows better WER but also higher Sim-O and UTMOS scores compared to SpeechTokenizer. 
+> This confirms the effectiveness of our approach, indicating that our codec handles the integration of semantic and acoustic information more proficiently.
+
+#### Analysing the Effect of Codec
+
+> To further analyse the above results caused by different audio codecs, we evaluate phonetic discriminability using the ABX error rate \cite{schatz2013evaluating}. 
+> This metric assesses how well different codecs can distinguish between similar phonetic sounds within and across various contexts. 
+> We specifically examine the continuous representations for VQ as indicated by the results in the following table \ref{abx}. 
+> We compare the performance of various models in terms of within and across phonetic discriminability:
+
+> Key insights include:
+> - Both SpeechTokenizer and ***X-Codec*** significantly outperform pure acoustic codecs like Encodec and DAC in phonetic discriminability, which supports our claim that enhancing semantic understanding in codecs helps modelling content such as phonetic details.
+> - The ***X-Codec*** demonstrates a notable trend of improved phonetic discriminability with an increase in the number of quantizations (nq). 
+> Specifically, as nq increases from 1 to 8, the ABX error rates consistently decrease, thereby highlighting effectiveness of the ***X-Codec***'s design in enhancing semantic integration across multiple quantization layers.
+> - In contrast, the SpeechTokenizer, while exhibiting commendable performance at a lower quantization level (nq = 1), fails to show significant improvement as nq is increased. 
+> This suggests a design limitation; the codec's reliance on the initial quantization to carry semantic information restricts its ability to process a broader spectrum of semantic information. 
+> Notably, the performance of ***X-Codec*** at nq = 8 significantly exceeds that of SpeechTokenizer.
+
+> These results underline the effectiveness of our method in facilitating enhanced semantic integration, leading to better phonetic discriminability and audio LLMs. 
+> In addition, these results also show that our simple concatenate methods surpass disentangle methods such as speechtokenizer.
+
+### Music & Sound Generation
+
+> To the best of our knowledge, this is the first exploration into the potential benefits of incorporating semantic information into audio codecs for enhancing music and general sound generation through audio LLMs. 
+> Conventional methods for general audio representation learning, aiming at capturing the semantic discriminability of audios, are generally based on 2D mel-spectrogram, such as AudioMAE \cite{huang2022masked} and Beats \cite{chen2022beats}. 
+> These methods are in stark contrast to traditional codecs that process audio sequentially, frame-by-frame. 
+> This difference poses challenges for direct integration into existing audio generation frameworks.
+>
+> To bridge this gap, we have developed a variant of HuBERT, specifically adapted for general audio, which we refer to as HuBERT-General-Audio. 
+> This HuBERT-General-Audio is trained on an expansive internal dataset of approximately 200,000 hours, with a similar distribution as AudioSet. 
+> Additionally, our proposed ***X-Codec*** is also trained using these data for 400,000 steps until convergence, incorporating the HuBERT-General-Audio model within its semantic module. 
+> For a fair comparison, we train a baseline acoustic codec under identical settings but excluding semantic information. 
+
+#### Training Details of Self-Supervised General Audio Representation
+
+> HuBERT-General-Audio is trained using 8 NVIDIA H800 GPUs on 2.6 million tokens across 325,000 iterations. 
+> For training stability, we adopt an inverse square root learning schedule, a modification from the polynomial decay schedule originally utilized in \cite{hsu2021hubert}. 
+> The learning rate is set at 0.0003 with warmup steps of 32,000. 
+> Unlike the original HuBERT, which utilizes MFCCs as the training target unit designed specifically for speech, our model leverages the first VQ layer of Encodec as the training target for acoustic unit discovery in the general audio. 
+> This choice eliminates the need for the K-means discretization step, saving significant time and computational resources.
+
+#### Music Continuation
+
+> **Training Details**: Acquiring high-quality text-music pair data is challenging; therefore, we gathered approximately 100,000 hours of music-only data, including about one million songs for the music continuation task. 
+> We deployed nanoGPT \footnote{https://github.com/karpathy/nanoGPT} to implement a GPT-2-medium (approximately 300M parameters) \cite{radford2019language} as our generative model. 
+> This model utilizes the first  VQ  from our codec to construct the training sequences, with additional experiments involving multiple VQs detailed in the appendix. 
+> We set the block size of sequence modelling to 4096, corresponding to roughly 82 seconds of audio, and adjust the vocabulary size from 50,257 to 1024, matching our codec's codebook size. 
+> Other training hyperparameters are consistent with previous GPT-2-medium configurations. 
+> We train 300,000 steps on 8 NVIDIA H800 GPUs. 
+> The batch size is set to 20, with a learning rate of 3e-4 and a warmup phase of 2000 steps.
+
+> **Experiments**:
+> For music continuation, we randomly crop 600 samples with each 40 seconds in duration from the MUSDB18 dataset \cite{rafii2017musdb18}. 
+> The initial 10 seconds of each sample are used as prompts for the audio LLM, while the subsequent 30 seconds are generated by the model. 
+> These generated segments are then compared against the corresponding ground truth (GT) segments. 
+> To ensure that the assessment is independent of the codec's reconstruction fidelity, both the generated and GT audio are reconstructed using the first VQ layer of the codec, ensuring performance differences attributed solely to the generative models themselves.
+>
+> The evaluation metrics of the generated music include: Frechet Distance (FD) computed using features from Pretrained Audio Neural Networks (PANNs) \cite{kong2020panns}, Frechet Audio Distance (FAD), and FD-MERT Layer 9 \cite{li2023mert}. 
+> The results, as summarized in Table \ref{music}, reveal that the ***X-Codec*** significantly outperforms the baseline acoustic codec across all metrics. 
+> This superior performance indicates the ***X-Codec*** has a better understanding and enabling more effective reproduction of complex musical structures.
+
+#### Text-to-Sound
+
+> **Training Details**: 
+> Still, GPT-2-medium (approximately 300M parameters) are adopted for conditional text-to-sound tasks, where the condition embedding is extracted from text captions using LAION-CLAP \cite{wu2023large} and linearly projected from 512 dimensions to 1024 dimensions for GPT input. 
+> The training data consists of approximately 400 hours of audio content sourced from the AudioCaps dataset \cite{kim2019audiocaps} and the AudioSet SL subset from the WavsCaps dataset \cite{mei2024wavcaps}. 
+> All audio samples are uniformly resampled to a 16kHz sampling rate. 
+> The first four tokens from the VQ layers are preprocessed and flattened to configure the GPT model's block size to 2000, corresponding to a processing rate of 50Hz. 
+> The training process spans 80,000 steps on four NVIDIA 4090 GPUs, with a batch size of 8 and a learning rate of 3e-4. 
+> A warmup phase of 2000 steps is employed to optimize the training process.
+> **Evaluation Metrics**:
+> following \cite{huang2023make} and \cite{liu2023audioldm}, we calculate Frechet Distance (FD), Inception Score (IS), Frechet Audio Distance (FAD) for text-to-audio generation. 
+> In addition, CLAP score \cite{huang2023make} is used to evaluate the correspondence between the generated audio and the text prompt.
+> **Experiment Results**:
+> As shown in Table \ref{t2s}, the proposed ***X-Codec*** significantly outperforms the baseline acoustic codec across all metrics. 
+> These results demonstrate that semantic information integration significantly enhances the codec's capability, underscoring the value of semantic enrichment in audio generation tasks.
+
+#### Analysing the Effect of Codec
+
+> We hypothesize that the enhanced audio generation capabilities of the audio LLMs are attributed to the improved semantic understanding facilitated by the ***X-Codec***. 
+> To validate this hypothesis, we employ the ARCH benchmark \cite{la2024benchmarking} to evaluate the audio semantic understanding, and the benchmark is a comprehensive framework specifically designed to evaluate automatic recognition learning methods across a diverse range of audio classification domains, including acoustic events, music, and speech. 
+> The results from this benchmark are shown in Table \ref{arch}.
+>
+> Our findings indicate that HuBERT-general-audio significantly outperforms traditional acoustic codecs such as DAC, Encodec, and the baseline acoustic codec across all metrics. 
+> This improvement highlights the enhanced semantic understanding of ***X-Codec*** for general audio, which appears to be lacking in conventional acoustic audio codecs.
+>
+> Moreover, ***X-Codec*** achieves performance that is comparable or even superior to HuBERT-general-audio, confirming the effectiveness of our approach to enhancing semantic processing within codecs. 
+> This equivalence or improvement indicates the capability of ***X-Codec*** to integrate semantic information robustly.
+
+## 5.Limitation: 局限性
+
+> While our method significantly enhances the performance of codecs for LLMs by integrating semantic information, it does come with certain trade-offs. 
+> According to the principle of "no free lunch," improving one aspect of a system often involves compromises in others. 
+> In the case of our enhanced codecs, the primary limitation lies in their potential impact on the original functionality of codecs, which is compression for information transmission. 
+> The introduction of a semantic extraction layer adds additional computational overhead, potentially increasing the time required for processing. 
+> This can affect the efficiency of the codec when used in applications where rapid data compression and transmission are critical. 
+> Consequently, while our approach offers substantial benefits for semantic understanding and audio processing, it may not be as effective in contexts where high-speed data compression is paramount.
+>
+> Furthermore, the integration of semantic layers can slightly impair certain acoustic metrics such as Mel and STFT distance, which are crucial for maintaining the fidelity of compressed audio. 
+> However, it is essential to note that these trade-offs are counterbalanced by significant improvements in human auditory perception, as evidenced by the UTMOS scores.
 
 ## 6.Conclusions: 结论
 
